--- a/package.json
+++ b/package.json
@@ -43,6 +43,20 @@
     ]
   },
   "devDependencies": {
-    "@mocks-server/main": "^2.6.3"
-  }
+    "@mocks-server/main": "^2.6.3",
+    "mockserver-node": "^5.13.2"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "mocks.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/baby0021109/RealCloud.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/baby0021109/RealCloud/issues"
+  },
+  "homepage": "https://github.com/baby0021109/RealCloud#readme"
 }
