--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "jquery": "^3.6.0",
+    "json2csv": "^5.0.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-country-region-selector": "^3.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-json-to-csv": "^1.0.4",
     "react-redux": "^7.2.8",
+    "react-resizable-table": "^0.1.0",
     "react-router-dom": "0.0.0-experimental-compat.6",
     "react-scripts": "^2.1.3",
+    "react-table-column-resizer": "^1.0.1",
     "redux": "^4.1.2",
+    "use-pagination-hook": "^1.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
